# afft

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: afftUtils.cmake
docs/: index.rst
examples/: CMakeLists.txt  dft_1D_C2C_simple.cpp
examples/cpu/: dft_1D_C2C_simple.cpp  dft_1D_C2C_simple_mod.cpp  dft_2D_C2C_simple_distrib.cpp  dft_2D_C2C_simple_mpi.cpp  dft_3D_C2C_transpose.c  dft_3D_C2C_transpose.cpp
examples/cuda/: dft_1D_C2C_simple.cpp  dft_2D_C2C_mgpu.cpp  dft_3D_C2C_transpose.c
examples/gpu/cuda/: dft_1D_C2C_simple.cpp
examples/gpu/hip/: dft_1D_C2C_simple.cpp
examples/gpu/opencl/: dft_1D_C2C_simple.cpp
examples/helpers/: cformat.hpp  cuda.hpp  hip.hpp  mpi.hpp
examples/hip/: dft_1D_C2C_simple.cpp
examples/mpi/cpu/: dft_2D_C2C_simple.cpp  dft_2D_C2C_transposed.cpp
examples/mpi/cuda/: dft_3D_C2C_1D_decomp.cpp
examples/opencl/: dft_1D_C2C_simple.cpp
include/afft/: .gitignore  3rdparty.hpp  Plan.h  Plan.hpp  PlanCache.h  PlanCache.hpp  Span.hpp  afft-config.h.in  afft-version.h.in  afft.cpp  afft.h  afft.hpp  alloc.h  alloc.hpp  architecture.h  architecture.hpp  backend.h  backend.hpp  clfft.hpp  common.h  common.hpp  concepts.hpp  config.h  config.hpp  cpu.hpp  cuda.hpp  cufft.hpp  distrib.hpp  error.h  error.hpp  exception.hpp  fftw3.h  fftw3.hpp  gpu.hpp  hip.hpp  init.h  init.hpp  macro.hpp  makePlan.hpp  memory.h  (+14 more)
include/afft/detail/: ArchDesc.hpp  Config.hpp  Desc.hpp  DimensionsConfig.hpp  MemDesc.hpp  MpDesc.hpp  PlanImpl.hpp  SourceLocation.hpp  TargetConfig.hpp  TargetDesc.hpp  TransformConfig.hpp  TransformDesc.hpp  architecture.hpp  backend.hpp  c-config.h  common.hpp  config.h  config.hpp  cxx-config.hpp  cxx.hpp  error.hpp  include.h  include.hpp  init.hpp  macro.hpp  makePlan.hpp  makePlanImpl.hpp  transform.hpp  type.hpp  typeTraits.hpp  utils.hpp  validate.hpp
include/afft/detail/clfft/: PlanImpl.hpp  error.hpp  init.hpp  makePlanImpl.hpp
include/afft/detail/cpu/: init.hpp  makePlanImpl.hpp
include/afft/detail/cpu/fftw3/: Lib.hpp  PlanImpl.hpp  init.hpp
include/afft/detail/cpu/mkl/: PlanImpl.hpp  error.hpp  init.hpp
include/afft/detail/cpu/pocketfft/: PlanImpl.hpp  init.hpp
include/afft/detail/cuda/: Module.hpp  cuda.hpp  device.hpp  enviroment.hpp  error.hpp  init.hpp
include/afft/detail/cuda/rtc/: error.hpp  rtc.hpp
include/afft/detail/cufft/: Handle.hpp  common.hpp  error.hpp  init.hpp  makePlanImpl.hpp  spst.hpp
include/afft/detail/fftw3/: Lib.hpp  PlanImpl.hpp  init.hpp
include/afft/detail/gpu/: init.hpp  makePlanImpl.hpp
include/afft/detail/gpu/clfft/: PlanImpl.hpp  error.hpp  init.hpp
include/afft/detail/gpu/cuda/: Module.hpp  cuda.hpp  device.hpp  enviroment.hpp  error.hpp  init.hpp
include/afft/detail/gpu/cuda/rtc/: error.hpp  rtc.hpp
include/afft/detail/gpu/cufft/: Handle.hpp  PlanImpl.hpp  error.hpp  init.hpp
include/afft/detail/gpu/hip/: device.hpp  error.hpp  hip.hpp  include.hpp  init.hpp
include/afft/detail/gpu/hipfft/: Handle.hpp  PlanImpl.hpp  error.hpp  init.hpp
include/afft/detail/gpu/opencl/: error.hpp  include.hpp  init.hpp  opencl.hpp
include/afft/detail/gpu/rocfft/: PlanImpl.hpp  error.hpp  init.hpp
include/afft/detail/gpu/vkfft/: App.hpp  PlanImpl.hpp  error.hpp  include.hpp  init.hpp
include/afft/detail/heffte/: common.hpp  init.hpp  makePlan.hpp  mpst.hpp
include/afft/detail/hip/: error.hpp  hip.hpp  init.hpp
include/afft/detail/hipfft/: error.hpp
include/afft/detail/mkl/: PlanImpl.hpp  error.hpp  init.hpp
include/afft/detail/mpi/: error.hpp  init.hpp  mpi.hpp
include/afft/detail/opencl/: error.hpp  opencl.hpp
include/afft/detail/pocketfft/: Plan.hpp  PlanImpl.hpp  common.hpp  init.hpp  makePlan.hpp  makePlanImpl.hpp  spst.hpp
include/afft/detail/rocfft/: Plan.hpp  PlanImpl.hpp  error.hpp  init.hpp  makePlan.hpp  spmt.hpp  spst.hpp
include/afft/detail/vkfft/: App.hpp  Plan.hpp  PlanImpl.hpp  error.hpp  init.hpp  makePlan.hpp  spst.hpp
matlab/: CMakeLists.txt
matlab/examples/: plan_dft_nd_cpu.m
matlab/package/+afft/: Contents.m  Plan.m  clearPlanCache.m  fft.m  fft2.m  fftn.m  ifft.m  ifft2.m  ifftn.m  irfft.m  irfft2.m  irfftn.m  rfft.m  rfft2.m  rfftn.m
matlab/src/: entrypoint.cpp  fft.cpp  fft2.cpp  fftn.cpp  packageManagement.cpp  packageManagement.hpp  parser.hpp  plan.cpp  plan.hpp  toolboxManagement.cpp  toolboxManagement.hpp  transform.cpp  transform.hpp
matlab/src/mex/: afft-matlab.cpp  afft-matlab.hpp  entrypoint.cpp  packageManagement.hpp  planCache.hpp  transform.hpp
matlab/src/package/+afft/: Plan.m  fft.m  fft2.m  fftn.m  ifft.m  ifft2.m  ifftn.m  mlock.m  munlock.m
matlab/test/unit/transform/: AbstractTestTransform.m  TestDctn.m  TestDstn.m  TestFftn.m  TestIfftn.m  TestRfftn.m
matlab/toolbox/+afft/: Contents.m  Plan.m  clearPlanCache.m  dct.m  dct2.m  dctn.m  dht.m  dht2.m  dhtn.m  dst.m  dst2.m  dstn.m  dtt.m  dtt2.m  dttn.m  fft.m  fft2.m  fftn.m  hasBackend.m  hasGpuSupport.m  idct.m  idct2.m  idctn.m  idht.m  idht2.m  idhtn.m  idst.m  idst2.m  idstn.m  idtt.m  idtt2.m  idttn.m  ifft.m  ifft2.m  ifftn.m  irfft.m  irfft2.m  irfftn.m  maxDimCount.m  maxRank.m  (+3 more)
matlab/toolbox/+afft/+internal/: cufftIsLtoEa.m  hasCufftCallbacks.m  isAccelerated.m  isBackend.m  isDimension.m  isNormalization.m  isSelectStrategy.m  isThreadLimit.m
matlab/toolbox/+afft/+test/+unit/: AbstractTestTransform.m  TestDct.m  TestDctn.m  TestDhtn.m  TestDst.m  TestDstn.m  TestFft.m  TestFft2.m  TestFftn.m  TestIdct.m  TestIfft.m  TestIfft2.m  TestIfftn.m  TestRfftn.m
matlab/toolbox/+afft/+test/+unit/private/: AbstractTestTransform.m
mod/: CMakeLists.txt  afft.cpp  afft.cppm
src/: CMakeLists.txt  Plan.cpp  afft-c.cpp  afft-cxx-module.cpp  afft-cxx.cpp  alloc.cpp  architecture.hpp  backend.cpp  backend.hpp  convert.hpp  error.cpp  error.hpp  init.cpp  memory.cpp  transform.hpp  utils.cpp  version.cpp
src/c/: Plan.cpp  backend.cpp  backend.hpp  common.hpp  convert.hpp  init.cpp  transform.hpp  utils.cpp  version.cpp  version.hpp
src/c-library/: alloc.cpp  architecture.hpp  backend.hpp
src/cxx-library/: cxx-library.cpp
